# Numpy-FFNN-Classification-MNIST

./: .gitignore  README.md  main.py  model.py  plots.py  pyproject.toml  requirements.txt
