[project]
name = "numpy-ffnn-classification-mnist"
version = "1.0.0"
description = "Feedforward classification neural network for MNIST dataset using NumPy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.11.1",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 120
